[package]
name = "zoha-vte4"
version = "0.0.3"
authors = ["Koosha Hosseiny <i@koosha.io>"]
categories = ["api-bindings"]
description = "Rust bindings for the VTE Gtk4 library, temporary clone of original GTK work"
edition = "2021"
keywords = ["vte", "gtk", "gnome"]
license = "MIT"
repository = "https://github.com/hkoosha/zoha-vte4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "1.3"
ffi = { package = "zoha-vte4-sys", path = "./sys", version = "0.0.3" }
io-lifetimes = "1.0.3"

glib = "0.18.4"
gio = "0.18.4"
pango = "0.18.3"

[dependencies.gdk]
package = "gdk4"
version = "0.7.3"

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"

[features]
default = []
v0_66 = ["ffi/v0_66"]
v0_70 = ["v0_66", "ffi/v0_70"]
v0_72 = ["v0_70", "ffi/v0_72"]
